--- a/src/shell.css
+++ b/src/shell.css
@@ -100,3 +100,7 @@ body:not(.vscode-dark) iframe.fullscreen {
   backdrop-filter: blur(15px);
   background-color: rgba(0,0,0,0.6);
 }
+
+.xterm-viewport {
+  overflow: hidden;
+}
